--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -7,6 +7,7 @@
     <script src="./tooltip.js"></script>
 </head>
 <body>
-    <bt-tooltip></bt-tooltip>
+    <p><bt-tooltip>Web Components</bt-tooltip> are cool</p>
+    
 </body>
 </html>
