add an attribute

--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -7,7 +7,7 @@
     <script src="./tooltip.js"></script>
 </head>
 <body>
-    <p><bt-tooltip>Web Components</bt-tooltip> are cool</p>
-    
+    <p><bt-tooltip text="This is the text for hover">Web Components</bt-tooltip> are cool</p>
+    <bt-tooltip>I can reuse it wherever I want</bt-tooltip>
 </body>
 </html>
