add HTML template

--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -7,7 +7,13 @@
     <script src="./tooltip.js"></script>
 </head>
 <body>
-    <p><bt-tooltip text="This is the text for hover">Web Components</bt-tooltip> are cool</p>
+    <template id="tooltip-template">
+        <span>(?)</span>
+    </template>
+
+    <p>
+        <bt-tooltip text="This is the text for hover">Web Components</bt-tooltip> are cool
+    </p>
     <bt-tooltip>I can reuse it wherever I want</bt-tooltip>
 </body>
 </html>
