--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Components</title>
     <script src="./tooltip.js"></script>
+    <script src="./confirm-link.js"></script>
+    
 </head>
 <body>
     <p>
         <bt-tooltip text="This is the text for hover">Web Components</bt-tooltip> are cool
     </p>
     <bt-tooltip></bt-tooltip>
+    <a is="bt-confirm-link" href="https://google.com">Google</a>
 </body>
 </html>
