--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -7,6 +7,9 @@
     <script src="./tooltip.js"></script>
     <script src="./confirm-link.js"></script>
     <style>
+        html {
+            --color-primary: lightblue;
+        }
         .highlight {
             background-color: rgb(248, 194, 94);
         }
