--- a/full-course/web-components/index.html
+++ b/full-course/web-components/index.html
@@ -7,12 +7,14 @@
     <script src="./tooltip.js"></script>
     <script src="./confirm-link.js"></script>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         html {
             --color-primary: lightblue;
+            font-family: sans-serif;
         }
-        .highlight {
-            background-color: rgb(248, 194, 94);
-        }
+        
 
     </style>
     
