add styling to the modal elements ::slot()

--- a/full-course/web-components/basic-modal-component/index.html
+++ b/full-course/web-components/basic-modal-component/index.html
@@ -17,7 +17,9 @@
     </style>
 </head>
 <body>
-    <bt-modal></bt-modal>
+    <bt-modal>
+        <p>You agree to enter!</p>
+    </bt-modal>
     <p>Please confirm your choice.</p>
     <button>Show details & Confirm</button>
 </body>
