--- a/full-course/web-components/basic-modal-component/index.html
+++ b/full-course/web-components/basic-modal-component/index.html
@@ -22,5 +22,13 @@
     </bt-modal>
     <p>Please confirm your choice.</p>
     <button>Show details & Confirm</button>
+    <script>
+        const showBtn = document.querySelector('button');
+        const modal = document.querySelector('bt-modal');
+        showBtn.addEventListener('click', () => {
+            modal.setAttribute('opened', '');
+        });
+
+    </script>
 </body>
 </html>
