--- a/full-course/web-components/basic-modal-component/index.html
+++ b/full-course/web-components/basic-modal-component/index.html
@@ -26,7 +26,11 @@
         const showBtn = document.querySelector('button');
         const modal = document.querySelector('bt-modal');
         showBtn.addEventListener('click', () => {
-            modal.setAttribute('opened', '');
+            // modal.setAttribute('opened', '');
+            if (!modal.isOpen) {
+                modal.open();
+                console.log('Opening...');
+            }
         });
 
     </script>
