add tooltip with pseudo element: ::after and hover 🥳

--- a/mini-projects/tooltip/index.html
+++ b/mini-projects/tooltip/index.html
@@ -10,6 +10,6 @@
 <body>
     <h2>Hover on the verb to see its simple past and past participle form</h2> 
     
-    <p>A few weeks ago I (see) <input type="text"> her at Wallmart.</p>
+    <p>A few weeks ago I <span class="tooltip" data-tooltip="saw, seen" >(see)</span>  <input type="text"> her at Wallmart.</p>
 </body>
 </html>
