--- a/mini-projects/tooltip/index.html
+++ b/mini-projects/tooltip/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h2>Hover on the verb to see its simple past and past participle form</h2> 
-    
-    <p>A few weeks ago I <span class="tooltip" data-tooltip="saw, seen" >(see)</span>  <input type="text"> her at Wallmart.</p>
+    <h3>CSS</h3>
+    <p>A few weeks ago I <span class="tooltip-css" data-tooltip="saw, seen" >(see)</span>  <input type="text"> her at Wallmart.</p>
+    <h3>JavaScript</h3>
+    <p>My mother has already <span class="tooltip-js" data-tooltip="wrote, written">(write)</span>  two letters.</p>
+
+    <div class="div-tooltip"></div>
 </body>
 </html>
