--- a/mini-projects/tooltip/index.html
+++ b/mini-projects/tooltip/index.html
@@ -12,7 +12,13 @@
     <h3>CSS</h3>
     <p>A few weeks ago I <span class="tooltip-css" data-tooltip="saw, seen" >(see)</span>  <input type="text"> her at Wallmart.</p>
     <h3>JavaScript</h3>
-    <p>My mother has already <span class="tooltip-js" data-tooltip="wrote, written">(write)</span>  two letters.</p>
+    <p>My mother has already <span class="tooltip-js" data-tooltip="wrote, written">(write)</span>
+        <select class="items">
+            <option value="item-0"></option>
+            <option value="item-1">wrote</option>
+            <option value="item-2">written</option>
+          </select>    
+    two letters.</p>
 
     <div class="div-tooltip"></div>
 </body>
