--- a/full-course/this/index.html
+++ b/full-course/this/index.html
@@ -38,10 +38,58 @@ var person = {
 </pre>
         </p>
     </div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+
+    <div class="card">
+        <h2 class="card__title">this in a Method</h2>
+        <p class="card__explanation">
+        <pre>
+In an object method, this refers to the "owner" of the method.
+
+In the example on the top of this page, this refers to the person object.
+
+The person object is the owner of the fullName method.
+        </pre>
+        </p>  
+        <pre><code>
+fullName : function() {
+    return this.firstName + " " + this.lastName;
+    }
+        </code></pre>
+    </div>
+    <div class="card">
+        <h2 class="card__title">this Alone</h2>
+        <p class="card__explanation">
+            <pre>
+When used alone, the owner is the Global object, so this refers to the Global object.
+
+In a browser window the Global object is [object Window]:
+            </pre>
+        </p>
+
+        <pre><code>
+    var x = this;
+        </code></pre>
+
+        <p class="card__explanation">
+            <pre>
+In strict mode, when used alone, this also refers to the Global object [object Window]:
+            </pre>
+        </p>
+
+        <pre><code>
+    "use strict";
+    var x = this;
+            </code></pre>
+    </div>
+    
+    <div class="card">
+        <h2 class="card__title"></h2>
+        <p class="card__explanation"></p>
+    </div>
+    <div class="card">
+        <h2 class="card__title"></h2>
+        <p class="card__explanation"></p>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
