--- a/full-course/objects/index.html
+++ b/full-course/objects/index.html
@@ -7,6 +7,7 @@
     <title>JS Objects</title>
     <script src="./objects.js" defer></script>
     <script src="./math-object.js" defer></script>
+    <script src="./primitive-vs-reference-values.js" defer></script>
 </head>
 <body>
     
