--- a/tutorials/joke-api-fetch/index.html
+++ b/tutorials/joke-api-fetch/index.html
@@ -9,6 +9,13 @@
     <script src="./app.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="joke" class="joke">
+            // here comes the joke
+        </div>
+        <button id="get_joke" class="btn">
+            Get another joke
+        </button>
+    </div>
 </body>
 </html>
